fix content of notebooks

--- a/exemple2.ipynb
+++ b/exemple2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d67fee73e00d401cb60391858f23e9ab",
+       "model_id": "455d8df9a3b14e4d9ef31f80ad5a4e9e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,18 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0m\u001b[01;34mAndroid\u001b[0m/                \u001b[01;34mDesktop\u001b[0m/    \u001b[01;34mlibvirt\u001b[0m/  \u001b[34;42mPictures\u001b[0m/     \u001b[01;34mSSL\u001b[0m/        \u001b[01;34mVideos\u001b[0m/\n",
-      "\u001b[01;34mAndroidStudioProjects\u001b[0m/  \u001b[01;34mDocuments\u001b[0m/  \u001b[01;34mMnt\u001b[0m/      \u001b[01;34mPublic\u001b[0m/       \u001b[01;34mTemplates\u001b[0m/\n",
-      "\u001b[01;34mApplications\u001b[0m/           \u001b[01;34mDownloads\u001b[0m/  \u001b[01;34mMusic\u001b[0m/    \u001b[01;34mquattor-git\u001b[0m/  test\n",
-      "\u001b[01;34mbin\u001b[0m/                    \u001b[01;34mgo\u001b[0m/         \u001b[01;34mMyDrive\u001b[0m/  \u001b[01;34msnap\u001b[0m/         test.scad\n",
-      "\u001b[01;34mCodes\u001b[0m/                  \u001b[01;34mipxe\u001b[0m/       \u001b[01;34mPacker\u001b[0m/   \u001b[01;34mSources\u001b[0m/      \u001b[01;34mTmp\u001b[0m/\n"
+      "exemple1.ipynb  exemple2.ipynb  README.md  requirements.txt  \u001b[0m\u001b[01;34mvenv\u001b[0m/\r\n"
      ]
     }
    ],
@@ -135,18 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Android\t\t       Desktop\t  libvirt  Pictures\tSSL\t   Videos\n",
-      "AndroidStudioProjects  Documents  Mnt\t   Public\tTemplates\n",
-      "Applications\t       Downloads  Music    quattor-git\ttest\n",
-      "bin\t\t       go\t  MyDrive  snap\t\ttest.scad\n",
-      "Codes\t\t       ipxe\t  Packer   Sources\tTmp\n"
+      "exemple1.ipynb\texemple2.ipynb\tREADME.md  requirements.txt  venv\r\n"
      ]
     }
    ],
@@ -278,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -306,10 +298,10 @@
        "<h1>Mon Titre1</h1>"
       ],
       "text/plain": [
-       "<__main__.Title at 0x7fda12749cd0>"
+       "<__main__.Title at 0x7fd226adbe90>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -329,10 +321,10 @@
        "<h1><img src=\"https://lapth.cnrs.fr/images/logo/lapth.png\" />Mon Titre2</h1>"
       ],
       "text/plain": [
-       "<__main__.Title at 0x7fda1274d810>"
+       "<__main__.Title at 0x7fd226ac7dd0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,51 +342,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/gauthierl/Tmp\n"
+      "/usr/share/zoneinfo\n"
      ]
     }
    ],
    "source": [
-    "%cd ~/Tmp"
+    "%cd /usr/share/zoneinfo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0m\u001b[01;34mctapipe\u001b[0m/  hosts2  hosts4    \u001b[01;34mnats.rb\u001b[0m/    \u001b[01;34mtest\u001b[0m/     test2unix\n",
-      "hosts     hosts3  \u001b[01;34mnats.js\u001b[0m/  \u001b[01;34mrustlings\u001b[0m/  test2dos\n"
-     ]
-    }
-   ],
-   "source": [
-    "%ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/gauthierl/Tmp'"
+       "'/usr/share/zoneinfo'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,19 +379,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm: remove write-protected regular file 'hosts2'? "
+      "\u001b[0m\u001b[01;34mAfrica\u001b[0m/      \u001b[01;36mEire\u001b[0m@       \u001b[01;36mIceland\u001b[0m@           MST7MDT      \u001b[01;34mSystemV\u001b[0m/\r\n",
+      "\u001b[01;34mAmerica\u001b[0m/     EST         \u001b[01;34mIndian\u001b[0m/            \u001b[01;36mNavajo\u001b[0m@      \u001b[01;36mTurkey\u001b[0m@\r\n",
+      "\u001b[01;34mAntarctica\u001b[0m/  EST5EDT     \u001b[01;36mIran\u001b[0m@              \u001b[01;36mNZ\u001b[0m@          tzdata.zi\r\n",
+      "\u001b[01;34mArctic\u001b[0m/      \u001b[01;34mEtc\u001b[0m/        iso3166.tab        \u001b[01;36mNZ-CHAT\u001b[0m@     \u001b[01;36mUCT\u001b[0m@\r\n",
+      "\u001b[01;34mAsia\u001b[0m/        \u001b[01;34mEurope\u001b[0m/     \u001b[01;36mIsrael\u001b[0m@            \u001b[01;34mPacific\u001b[0m/     \u001b[01;36mUniversal\u001b[0m@\r\n",
+      "\u001b[01;34mAtlantic\u001b[0m/    Factory     \u001b[01;36mJamaica\u001b[0m@           \u001b[01;36mPoland\u001b[0m@      \u001b[01;34mUS\u001b[0m/\r\n",
+      "\u001b[01;34mAustralia\u001b[0m/   \u001b[01;36mGB\u001b[0m@         \u001b[01;36mJapan\u001b[0m@             \u001b[01;36mPortugal\u001b[0m@    \u001b[01;36mUTC\u001b[0m@\r\n",
+      "\u001b[01;34mBrazil\u001b[0m/      \u001b[01;36mGB-Eire\u001b[0m@    \u001b[01;36mKwajalein\u001b[0m@         \u001b[01;34mposix\u001b[0m/       WET\r\n",
+      "\u001b[01;34mCanada\u001b[0m/      \u001b[01;36mGMT\u001b[0m@        leapseconds        \u001b[01;36mposixrules\u001b[0m@  \u001b[01;36mW-SU\u001b[0m@\r\n",
+      "CET          \u001b[01;36mGMT+0\u001b[0m@      leap-seconds.list  \u001b[01;36mPRC\u001b[0m@         zone1970.tab\r\n",
+      "\u001b[01;34mChile\u001b[0m/       \u001b[01;36mGMT-0\u001b[0m@      \u001b[01;36mLibya\u001b[0m@             PST8PDT      zone.tab\r\n",
+      "CST6CDT      \u001b[01;36mGMT0\u001b[0m@       \u001b[01;36mlocaltime\u001b[0m@         \u001b[01;34mright\u001b[0m/       \u001b[01;36mZulu\u001b[0m@\r\n",
+      "\u001b[01;36mCuba\u001b[0m@        \u001b[01;36mGreenwich\u001b[0m@  MET                \u001b[01;36mROC\u001b[0m@\r\n",
+      "EET          \u001b[01;36mHongkong\u001b[0m@   \u001b[01;34mMexico\u001b[0m/            \u001b[01;36mROK\u001b[0m@\r\n",
+      "\u001b[01;36mEgypt\u001b[0m@       HST         MST                \u001b[01;36mSingapore\u001b[0m@\r\n"
      ]
     }
    ],
    "source": [
-    "%rm hosts2"
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map"
    ]
   },
   {
@@ -428,7 +423,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "123357391c36486b86b5ca5943eb9996",
+       "model_id": "b358b19f7e97474eb9827cbb36e1b7a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -442,7 +437,7 @@
    ],
    "source": [
     "from ipyleaflet import Map, Marker\n",
-    "lab = (45.9212404, 6.1594074)\n",
+    "lab = (45.232255, 6.743487)\n",
     "m = Map(center=lab, zoom=16)\n",
     "marker = Marker(location=lab, draggable=False)\n",
     "m.add_layer(marker);\n",
